Fixed alignment issues with body

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,14 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
+
 html {
-    min-height: 100%;
+    height: 100%;
 }
 
 body {
     background: #fefae5; 
     padding: 0;
-    margin: 5%;
-    min-height: 100%;
+    margin: 3em;
+    min-height: 80%;
 }
 
 .shadowed {
